--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ white-space: normal;
 font-weight: 700;
 color:#fff;
 border-width:0px; font-family: 'Rajdhani', sans-serif;">
-<div class="slider-block-black">Professional Drone Roof Surveys</div></div>
+<div class="slider-block-black">Professional Drone Roof Surveysss</div></div>
 
 <!-- LAYER NR. 4 [ for paragraph] -->
 <div class="tp-caption  tp-resizeme" 
